src/test/ui/return/return-impl-maybe-sized.stderr
error: return type should be sized
  --> $DIR/return-impl-maybe-sized.rs:3:17
   |
LL | fn test_fn() -> impl ?Sized {}
   |                 ^^^^^^^^^^^

error: aborting due to previous error

